--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.2"
   }
 }
