--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
     "typescript": "4.8.4"
